# automation_demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
commit_watcher/: README.md  commit_watcher.py  config.example.yaml  docker-compose.yml  requirements.txt
commit_watcher/juniper_api/: README.md  __init__.py
examples/: example.py  example_filter.py
juniper_api/: device.py  exceptions.py
others/upgrade_auto/: README.md  requirements.txt
others/upgrade_auto/temporal-stack/: .env  .gitignore  docker-compose.http.yml  docker-compose.https.yml  docker-compose.yml
others/upgrade_auto/upgrade-wf/: device_upgrade_workflow.py
others/upgrade_cli_ansible/: .gitignore  GUIDED_UPGRADE.md  README.md  ansible.cfg  inventory.yml  requirements.yml
others/upgrade_cli_ansible/playbooks/: activate_bgp_groups.yml  activate_ri.yml  check_fpc_online.yml  check_node.yml  deactivate_bgp_groups.yml  deactivate_gres_nsr.yml  deactivate_ri.yml  diff_snapshots.yml  guided_upgrade.yml  reboot.yml  rollback_drain.yml  snapshot.yml  unshut_interfaces.yml  upgrade_software.yml  upload_release.yml
tools/commit_watcher/: README.md  config.example.yaml  requirements.txt  syslog_commit_watcher.py  webapp.py
tools/commit_watcher/static/: app.js  index.html  (+1 more)
tools/upgrade_temporal_ansible/: README.md  requirements.txt
upgrade_temporal_ansible/: README.md  requirements.txt
upgrade_temporal_ansible/ansible/: ansible.cfg  requirements.yml
upgrade_temporal_ansible/temporal-stack/: docker-compose.https.yml
upgrade_temporal_ansible/upgrade-wf/: ansible_upgrade_workflow.py
(+53 files in other folders)
